--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,4 +1,5 @@
-name: Format with Black
-  uses: lgeiger/black-action@master
+- name: Format with Black
+  uses: lgeiger/black-action@v2.0.0
   with:
-    args: . --check
+    args: .
+    check: true
